Fixed site structure

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "/"
-languageCode = "en-us"
-DefaultContentLanguage = "en"
+languageCode = "ja-JP"
+DefaultContentLanguage = "ja"
 
 title = "Docdock"
 theme = "docdock"
@@ -19,12 +19,18 @@ ordersectionsby = "weight" # ordersectionsby = "title"
 home = [ "HTML", "RSS", "JSON"]
 
 
-# [[menu.shortcuts]]
-# pre = "<h3>More</h3>"
-# name = "<i class='fa fa-github'></i> Github repo"
-# identifier = "ds"
-# url = "https://github.com/vjeantet/hugo-theme-docdock"
-# weight = 10
+[[menu.shortcuts]]
+pre = "<h3>More</h3>"
+name = "<i class='fa fa-github'></i> Github repo"
+identifier = "ds"
+url = "https://github.com/nikuyoshi/tech-notes"
+weight = 10
+
+[[menu.shortcuts]]
+name = "<i class='fa fa-twitter'></i> Twitter"
+url = "https://twitter.com/nikuyoshi"
+weight = 11
+
 #
 # [[menu.shortcuts]]
 # name = "<i class='fa fa-camera'></i> Showcases"
